--- a/.env
+++ b/.env
@@ -1,49 +1,33 @@
-APP_NAME=CarePro
-APP_ENV=local
-APP_KEY=base64:/2iNX6eIhb+w1V+olcS7gsqsIeNm774MV+Dx+IEtUJo=
+APP_NAME='DailyCargo'
+APP_ENV=development
+APP_KEY=base64:+kBNdPkteunWDmgBFlZpl8S1AXxRL3WWSAgfnQtZBu8=
 APP_DEBUG=true
-APP_URL=
-APP_MODE=hosted
-
-LOG_CHANNEL=stack
+APP_LOG_LEVEL=debug
+APP_URL=http://localhost
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
+DB_DATABASE=daily_cargo
+DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
-SESSION_LIFETIME=120
+QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=mail
-MAIL_HOST=
-MAIL_PORT=
-MAIL_USERNAME=
-MAIL_PASSWORD=
-MAIL_ENCRYPTION=
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
-
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-MAX_UPLOAD_SIZE=50000
-ALLOWED_FILES=jpeg,png,gif,pdf,doc,docx,ppt,pptx,zip,mp3,mp4
-UPLOAD_PATH=uploads
